# ChangeLog for dev-util/kscope
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/kscope/ChangeLog,v 1.38 2008/01/11 14:29:10 carlo Exp $

*kscope-1.6.1 (11 Jan 2008)

  11 Jan 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/kscope-1.6.1-desktop-entry.diff, +kscope-1.6.1.ebuild:
  Version bump.

*kscope-1.6.0 (25 Jul 2007)

  25 Jul 2007; Carsten Lohrke <carlo@gentoo.org> +kscope-1.6.0.ebuild:
  Version bump.

*kscope-1.5.2 (08 May 2007)

  08 May 2007; Carsten Lohrke <carlo@gentoo.org> -kscope-1.2.0.ebuild,
  -kscope-1.3.4.ebuild, -kscope-1.4.0.ebuild, -kscope-1.4.1.ebuild,
  +kscope-1.5.2.ebuild:
  Clean up. Version bump.

  24 Apr 2007; Christian Faulhammer <opfer@gentoo.org> kscope-1.4.2.ebuild:
  stable amd64, bug 175386

  23 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> kscope-1.4.2.ebuild:
  Stable on sparc wrt #175386

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> kscope-1.4.2.ebuild:
  ppc stable, bug #175386

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> kscope-1.4.2.ebuild:
  x86 stable wrt #175386

  20 Apr 2007; Carsten Lohrke <carlo@gentoo.org> kscope-1.4.2.ebuild:
  kde.eclass takes care of the desktop entry now.

*kscope-1.4.2 (20 Oct 2006)

  20 Oct 2006; Carsten Lohrke <carlo@gentoo.org> +kscope-1.4.2.ebuild:
  Version bump.

*kscope-1.4.1 (24 Aug 2006)

  24 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +kscope-1.4.1.ebuild:
  Version bump.

*kscope-1.4.0 (15 Aug 2006)

  15 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +kscope-1.4.0.ebuild:
  Version bump.

  09 Jun 2006; Joshua Jackson <tsunam@gentoo.org> ChangeLog:
  Stable on x86; bug #135655

  08 Jun 2006; Jon Hood <squinky86@gentoo.org> kscope-1.3.4.ebuild:
  Stable on amd64, #135655.

  07 Jun 2006; Jason Wever <weeve@gentoo.org> kscope-1.3.4.ebuild:
  Stable on SPARC wrt bug #135655.

  06 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> kscope-1.3.4.ebuild:
  ppc stable, bug #135655
