@@ -1,12 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX kscope-1.6.1-desktop-entry.diff 850 RMD160 2b84bcb83d48db6026226ad21b55f7fe9652be61 SHA1 8e8074f9ba22ef29611c1ebd7b8fcc84cf02fa74 SHA256 6b7c74c6be072d30e6456dba715f18a4df954909fcb056504fef6e3dfa838a0a
 AUX kscoperc 102 RMD160 0dcd1cf19e428ab04b515b9f05268d2f74642398 SHA1 7fc474a01131a07e222b24498f4eb91bde80cecc SHA256 e13cb2f950696aeb34fcecaa9df72b2d372b8ec38466bb87756efb2743ea1384
 DIST kscope-1.4.2.tar.gz 1253216 RMD160 0df044945ed87c660a04d79827b92409484403c9 SHA1 c4e810c20854b00c9b8149bea14ddbcd045f4675 SHA256 ab560011fc97936ae52880740cdeb6f989c4fe930643952eb8aceaae8c6db732
-DIST kscope-1.5.2.tar.gz 1265320 RMD160 e3eeeec0d726e471fd83f425cf766eec54daa602 SHA1 932f64f0b47b99095c6b8c819c1a3d7ca6744b9f SHA256 d5a157d05173ceaf5e99bea690c96f3af3b913f530204294e30e5a203b8e7a48
-DIST kscope-1.6.0.tar.gz 1988221 RMD160 bd9986a321504fbbc9f5613cf3af3f2c99569f49 SHA1 72e342243f475e69ccb46b40a28594c5ef0ea1ab SHA256 3bf28f2211ae83e15eb5397700515020bf1f72eb5722375a9e6f4302486a7009
 DIST kscope-1.6.1.tar.gz 2004451 RMD160 9456d8474d023ad04c683690f3f2ab17cc0d4246 SHA1 e5541fafbcba84b5a9a60a80e040d219c518b842 SHA256 6311c070c4d4e27c9dfa69265cca84e8041c1115808ff2a168fbde2c8a2c13c1
 EBUILD kscope-1.4.2.ebuild 732 RMD160 369327a79532f83671a5dff255b8cb9c5f6fa9e8 SHA1 8b6185846d06720ff697de8f8cd63b6216888f82 SHA256 b02d61d3fa94d1267b0a5c919e0c5c1577ed6c3e5878cafaa195b8614e70152b
-EBUILD kscope-1.5.2.ebuild 736 RMD160 df2ad4bdb73d7dd2e256cfd524e7c0cb2e617cdb SHA1 5c7ea8787164beadd608cd113b07005dc024c2d0 SHA256 4bdb4f63569f8768c86c54febd67d9fc6e76ee24ff2df9e7526b0a7c2c7c610c
-EBUILD kscope-1.6.0.ebuild 732 RMD160 c436f45dc11406a7a2ad43ebf73c68bbc558a668 SHA1 bf0f5c9d2f04f43a21fdd221b4e71715ee732927 SHA256 d105277e5e43d34629ae6663a724839a9e28fc1e5f138347659250434141dbd7
 EBUILD kscope-1.6.1.ebuild 787 RMD160 a751aeb1a0205d1f254ad36ed233d866d56f6df3 SHA1 42f59c9822011a2bc695991fb1453206e1c32bb3 SHA256 c5ba66749d287a546c1307c4da56fefe819c472aadb83549bdfa10115a2d160b
-MISC ChangeLog 4666 RMD160 047180334e30856f2fbfd5939ae50b60b2a2cc20 SHA1 7c2554dce0362acbebca17fd28888c64f4712224 SHA256 8c2c6493a87e6fc6fa326846b006b62d2212b9bf07c430a2967a1f610873d519
+MISC ChangeLog 4773 RMD160 6f43314654fb85f3d1ade9d8ee6a924bd444dc54 SHA1 fbb185552e02bd0a263dfa4e3a8b29ef3ff75a8b SHA256 4ef14f1e1bcd7606c4cf6ee22b7d18cd7708f93adbd585b6157841034d2b3b23
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHujF9B18eXLOpYdkRAnawAKCrQktNpzt4HxC6LAjgkdexXvydKwCdGDKD
+YEe/O/xQByEgKuR9/kBOGZY=
+=Y4Hf
+-----END PGP SIGNATURE-----
